# splunk-ops-flight-recorder

./: .gitignore  LICENSE  README.md  architecture_diagram.md  pyproject.toml
backend/app/: __init__.py  ai_analyst.py  analysis.py  demo_data.py  incident_service.py  main.py  models.py  splunk_client.py  splunk_mcp_client.py
backend/tests/: test_ai_analyst.py  test_analysis.py  test_api.py  test_ingest_demo_data.py  test_splunk_client.py  test_splunk_mcp.py
docs/: architecture.md  demo-script.md  splunk-mcp.md
frontend/: app.js  index.html  styles.css
scripts/: generate_demo_data.py  ingest_demo_data.py
