[project]
name = "splunk-ops-flight-recorder"
version = "0.1.0"
description = "Splunk-powered incident reconstruction workspace for the Agentic AI hackathon."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "mcp>=1.27.2",
    "pydantic>=2.8.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["backend/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
